// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewTopicResource /> HOC page should require authentication 1`] = `
<div
  className="Layout"
  data-testid="Layout"
>
  <div
    className="Page"
  >
    <header
      className="Header"
      data-testid="Header"
    >
      <div
        className="content-container"
      >
        <div
          className="sm:flex items-center text-center sm:text-left"
        >
          <div
            className="flex-grow flex justify-center sm:justify-start"
          >
            <a
              href="/?mock=unauthenticated"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <img
                alt="Resource Rank Logo"
                height="50"
                src="/img/logo.svg"
                width="50"
              />
            </a>
          </div>
          <div
            className="NavItem NavLink ActiveNavLink"
            data-testid="ActiveLink"
          >
            Home
          </div>
          <div
            className="NavItem"
            data-testid="TopicsNavItem"
          >
            <div
              className="NavLink"
              data-testid="ActiveLink"
            >
              <a
                className=""
                href="/topics?mock=unauthenticated"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                Topics
              </a>
            </div>
          </div>
          <div
            className="NavItem"
          >
            <button
              className="btn btn-primary"
              data-testid="LoadingButton"
              onClick={[Function]}
            >
              Login
            </button>
          </div>
        </div>
      </div>
    </header>
    <div>
      <div
        className="mt-8 text-center text-lg"
      >
        You must login to view this page.
      </div>
    </div>
  </div>
  <footer
    className="Footer"
    data-testid="Footer"
  >
    <div
      className="content-container"
    >
      <div
        className="sm:flex text-center sm:text-left"
      >
        <div
          className="sm:order-2 sm:ml-10"
        >
          <h1
            className="text-4xl"
          >
            Our Mission
          </h1>
          <p
            className="py-3"
          >
            is to 
            <strong>
              simplify
            </strong>
             your learning journey. Learning can be 
            <strong>
              difficult
            </strong>
            , especially when starting. There are
             
            <strong>
              millions
            </strong>
             of educational courses, videos, and books
             
            <strong>
              scattered
            </strong>
             across the Internet.
          </p>
          <p
            className="py-3"
          >
            Resource Rank’s goal is to 
            <strong>
              consolidate
            </strong>
             all of these resources so that you can 
            <strong>
              quickly
            </strong>
             find the
             
            <strong>
              best
            </strong>
             resources for what you are learning.
          </p>
        </div>
        <div
          className="sm:order-1 mt-10 sm:mt-0 flex items-start justify-center sm:justify-start"
        >
          <img
            alt="Resource Rank Logo"
            className="max-w-none"
            height="75"
            src="/img/logo.svg"
            width="75"
          />
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`<NewTopicResource /> page should render correctly 1`] = `
<div
  data-testid="NewTopicResourcePage"
>
  <div
    className="BreadcrumbLayout"
    data-testid="BreadcrumbLayout"
  >
    <div
      className="Layout"
      data-testid="Layout"
    >
      <div
        className="Page"
      >
        <header
          className="Header"
          data-testid="Header"
        >
          <div
            className="content-container"
          >
            <div
              className="sm:flex items-center text-center sm:text-left"
            >
              <div
                className="flex-grow flex justify-center sm:justify-start"
              >
                <a
                  href="/?mock=standard"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  <img
                    alt="Resource Rank Logo"
                    height="50"
                    src="/img/logo.svg"
                    width="50"
                  />
                </a>
              </div>
              <div
                className="NavItem NavLink ActiveNavLink"
                data-testid="ActiveLink"
              >
                Home
              </div>
              <div
                className="NavItem"
                data-testid="TopicsNavItem"
              >
                <div
                  className="NavLink"
                  data-testid="ActiveLink"
                >
                  <a
                    className=""
                    href="/topics?mock=standard"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    Topics
                  </a>
                </div>
              </div>
              <div
                className="NavItem"
              >
                <button
                  className="btn btn-primary"
                  data-testid="LoadingButton"
                  onClick={[Function]}
                >
                  Login
                </button>
              </div>
            </div>
          </div>
        </header>
        <div>
          <div
            className="content-container pb-10"
          >
            <nav
              aria-label="breadcrumb"
              className="BreadcrumbContent"
            >
              <ol
                className="flex flex-wrap"
              >
                <li
                  className="flex"
                >
                  <div
                    className="BreadcrumbItem"
                    data-testid="ActiveLink"
                  >
                    <a
                      className="hyperlink"
                      href="/topics?mock=standard"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      Topics
                    </a>
                  </div>
                  <div
                    className="px-3"
                  >
                    /
                  </div>
                </li>
                <li
                  className="flex"
                >
                  <div
                    className="BreadcrumbItem"
                    data-testid="ActiveLink"
                  >
                    <a
                      className="hyperlink"
                      href="/topics/topic-slug?mock=standard"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      topic-name
                    </a>
                  </div>
                  <div
                    className="px-3"
                  >
                    /
                  </div>
                </li>
                <li
                  className="flex"
                >
                  <div
                    className="BreadcrumbItem"
                    data-testid="ActiveLink"
                  >
                    <a
                      className="hyperlink"
                      href="/topics/topic-slug/resources/add?mock=standard"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      Add
                    </a>
                  </div>
                  <div
                    className="px-3"
                  >
                    /
                  </div>
                </li>
                <li
                  className="flex"
                >
                  <div
                    className="BreadcrumbItem"
                    data-testid="ActiveLink"
                  >
                    <a
                      className="hyperlink"
                      href="/topics/topic-slug/resources/new?mock=standard"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      New
                    </a>
                  </div>
                </li>
              </ol>
            </nav>
            <div>
              <div
                className="text-4xl"
              >
                New Topic Resource
              </div>
              <div
                className="mt-10"
              >
                <div
                  className="ResourceDetailsForm"
                  data-testid="ResourceDetailsForm"
                >
                  <form
                    onSubmit={[Function]}
                  >
                    <div>
                      <div
                        className="TextInput"
                        data-testid="TextInput"
                      >
                        <div
                          className="flex flex-col"
                        >
                          <label
                            htmlFor="name"
                          >
                            Name
                          </label>
                          <input
                            autoComplete="off"
                            className="mt-2 form-control flex-grow"
                            id="name"
                            name="name"
                            onBlur={[Function]}
                            onChange={[Function]}
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      className="mt-6"
                    >
                      <div
                        className="TextInput"
                        data-testid="TextInput"
                      >
                        <div
                          className="flex flex-col"
                        >
                          <label
                            htmlFor="link"
                          >
                            Link
                          </label>
                          <input
                            autoComplete="off"
                            className="mt-2 form-control flex-grow"
                            id="link"
                            name="link"
                            onBlur={[Function]}
                            onChange={[Function]}
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      className="mt-10 flex flex-col sm:flex-row"
                    >
                      <button
                        className="btn btn-primary w-100"
                        disabled={null}
                        type="submit"
                      >
                        Submit
                      </button>
                      <a
                        className="mt-3 text-center btn btn-cancel-outline w-100 sm:mt-0 sm:ml-3"
                        href="/topics/topic-slug/resources/add?mock=standard"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                      >
                        Cancel
                      </a>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <footer
        className="Footer"
        data-testid="Footer"
      >
        <div
          className="content-container"
        >
          <div
            className="sm:flex text-center sm:text-left"
          >
            <div
              className="sm:order-2 sm:ml-10"
            >
              <h1
                className="text-4xl"
              >
                Our Mission
              </h1>
              <p
                className="py-3"
              >
                is to 
                <strong>
                  simplify
                </strong>
                 your learning journey. Learning can be 
                <strong>
                  difficult
                </strong>
                , especially when starting. There are
                 
                <strong>
                  millions
                </strong>
                 of educational courses, videos, and books
                 
                <strong>
                  scattered
                </strong>
                 across the Internet.
              </p>
              <p
                className="py-3"
              >
                Resource Rank’s goal is to 
                <strong>
                  consolidate
                </strong>
                 all of these resources so that you can 
                <strong>
                  quickly
                </strong>
                 find the
                 
                <strong>
                  best
                </strong>
                 resources for what you are learning.
              </p>
            </div>
            <div
              className="sm:order-1 mt-10 sm:mt-0 flex items-start justify-center sm:justify-start"
            >
              <img
                alt="Resource Rank Logo"
                className="max-w-none"
                height="75"
                src="/img/logo.svg"
                width="75"
              />
            </div>
          </div>
        </div>
      </footer>
    </div>
  </div>
</div>
`;
